Better layout for trail and main app

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -3,6 +3,8 @@
 *::before,
 *::after {
 	box-sizing: border-box;
+	scrollbar-width: thin;
+	scroll-behavior: smooth;
 }
 
 /* Prevent font size inflation */
