--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,7 +10,10 @@
 .app {
 	--padding: 1rem;
 	--sidebar-width: 14rem;
-	min-height: 100dvh;
+	--segment-width: 30rem;
+	height: 100%;
+	width: 100%;
+	display: flex;
 }
 
 .app-header {
@@ -20,6 +23,7 @@
 	column-width: 25ch;
 	column-gap: 2em;
 	padding: var(--padding);
+	flex: 1;
 }
 
 .app-nav {
@@ -27,18 +31,35 @@
 	flex-direction: column;
 }
 
+.app-main {
+	padding: var(--padding);
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+	flex: 0 1 100%;
+
+	@media (width < 600px) {
+		padding-block-end: 4.5rem;
+	}
+}
+
+.app:not(:has(.app-main)) {
+	flex-direction: column;
+	inset-block: 0;
+	overflow-y: auto;
+
+	.app-header {
+		width: 100%;
+	}
+}
+
 .app:has(.app-main) {
 	.app-header {
 		column-width: unset;
-		position: fixed;
 	}
 	@media (width >= 600px) {
-		padding-inline-start: var(--sidebar-width);
-
 		.app-header {
 			width: var(--sidebar-width);
-			inset-block: 0;
-			inset-inline-start: 0;
+			flex: 0 0 auto;
 			display: flex;
 			flex-direction: column;
 			gap: 0.75lh;
@@ -57,10 +78,14 @@
 				margin-inline-end: calc(-1 * var(--padding));
 			}
 		}
+		.app-main {
+			min-width: var(--segment-width);
+		}
 	}
 	@media (width < 600px) {
 		.app-header {
 			--chroma: 100%;
+			position: fixed;
 			inset-block-end: calc(var(--padding) / 2);
 			inset-inline: var(--padding);
 			overflow: hidden;
@@ -69,6 +94,7 @@
 			border-radius: var(--border-radius-small);
 			border: 1px solid var(--border);
 			padding: 0.25em 0;
+			z-index: 100;
 
 			& > *:not(:is(nav)) {
 				display: none;
@@ -94,26 +120,17 @@
 	}
 }
 
-.app-main {
-	padding: var(--padding);
-
-	@media (width < 600px) {
-		padding-block-end: 4.5rem;
-	}
-}
-
 .app-trail {
-	position: fixed;
-	inset-block: 0;
-	inset-inline-end: 0;
-	// max-width: 50%;
-	height: 100dvh;
+	flex: 1 0 auto;
 	overflow: auto;
 	z-index: 10;
 	background-color: var(--background);
 	display: flex;
 	flex-direction: row-reverse;
 	overscroll-behavior: contain;
+	position: sticky;
+	inset-inline-end: 0;
+	max-width: calc(100% - var(--sidebar-width));
 
 	.segments {
 		display: flex;
@@ -134,16 +151,18 @@
 	.segment {
 		background-color: var(--background);
 		padding: var(--padding);
-		width: 30rem;
+		width: var(--segment-width);
 		overflow-y: auto;
 	}
 
 	.separator {
 		border-inline-end: 1px solid var(--edge);
-		position: sticky;
 		inset-inline-start: 1px;
-		margin-inline-start: -1px;
 		width: 1px;
 		z-index: 100;
+	}
+
+	@media (width < 600px) {
+		display: none;
 	}
 }
