--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,161 +8,142 @@
 @import './utilities.scss' layer(utilities);
 
 .app {
-	--padding: 1rem;
 	--sidebar-width: 14rem;
 	--segment-width: 30rem;
 	height: 100%;
 	width: 100%;
 	display: flex;
+	gap: 1rem;
 }
 
-.app-header {
-	z-index: 1;
+.app-contents {
+	flex: 1;
+	max-width: 100%;
+}
+
+.app-nav,
+.app-toolbar,
+.app-footer {
 	font-size: var(--font-size-small);
 	line-height: 1.75em;
+}
+
+.app-index {
 	column-width: 25ch;
-	column-gap: 2em;
-	padding: var(--padding);
-	flex: 1;
+	column-gap: 1rem;
 }
 
-.app-nav {
-	display: flex;
-	flex-direction: column;
+.app-main,
+.app-footer,
+.app-nav,
+.app-toolbar {
+	padding: 1rem;
 }
 
-.app-main {
-	padding: var(--padding);
-	overflow-y: auto;
-	-webkit-overflow-scrolling: touch;
-	flex: 0 1 100%;
-
-	@media (width < 600px) {
-		padding-block-end: 4.5rem;
-	}
+.app-contents > hr {
+	display: none;
 }
 
-.app:not(:has(.app-main)) {
-	flex-direction: column;
-	inset-block: 0;
-	overflow-y: auto;
+@media (width < 600px) {
+	.app-nav {
+		--chroma: 100%;
+		position: fixed;
+		inset-block-end: 0.5rem;
+		inset-inline: 1rem;
+		background-color: var(--float);
+		z-index: 1;
+		border-radius: var(--border-radius-small);
+		border: 1px solid var(--border);
+		display: flex;
+		padding: 0.25em;
+		gap: 0.25em;
 
-	.app-header {
-		width: 100%;
-	}
-}
-
-.app:has(.app-main) {
-	.app-header {
-		column-width: unset;
-	}
-	@media (width >= 600px) {
-		.app-header {
-			width: var(--sidebar-width);
-			flex: 0 0 auto;
-			display: flex;
-			flex-direction: column;
-			gap: 0.75lh;
-			border-inline-end: 1px solid var(--divider);
-			background-color: var(--background);
-
-			& > * {
-				margin-block: 0;
-			}
-
-			.index {
-				flex: 1;
-				overflow: auto;
-				overscroll-behavior: contain;
-				padding-inline-end: var(--padding);
-				margin-inline-end: calc(-1 * var(--padding));
-			}
-		}
-		.app-main {
-			min-width: var(--segment-width);
-		}
-	}
-	@media (width < 600px) {
-		.app-header {
-			--chroma: 100%;
-			position: fixed;
-			inset-block-end: calc(var(--padding) / 2);
-			inset-inline: var(--padding);
-			overflow: hidden;
-			background-color: var(--float);
-			display: flex;
-			border-radius: var(--border-radius-small);
-			border: 1px solid var(--border);
-			padding: 0.25em 0;
-			z-index: 100;
-
-			& > *:not(:is(nav)) {
-				display: none;
-			}
-		}
-		.app-nav {
-			width: 100%;
-			display: flex;
-			flex-direction: row;
-			gap: 0.25em;
-			padding-inline: 0.25em;
-		}
 		.nav-link {
-			flex: 0 1 100%;
+			flex: 1 0 0;
+			display: flex;
 			flex-direction: column;
 			gap: 0;
-			text-align: center;
+			align-items: center;
 
 			&::before {
 				transform: translateY(0.25cap);
 			}
 		}
 	}
+	.app-toolbar {
+		display: none;
+	}
+	.app-contents:has(.app-main) .app-footer {
+		display: none;
+	}
+	.app-index {
+		column-width: 20ch;
+	}
+	.app-main,
+	.app-footer {
+		padding-block-end: 4.5rem;
+	}
 }
 
-.app-trail {
-	flex: 1 0 auto;
-	overflow: auto;
-	z-index: 10;
-	background-color: var(--background);
-	display: flex;
-	flex-direction: row-reverse;
-	overscroll-behavior: contain;
-	position: sticky;
-	inset-inline-end: 0;
-	max-width: calc(100% - var(--sidebar-width));
-
-	.segments {
+@media (width >= 600px) {
+	.app-contents:not(:has(.app-main)) {
 		display: flex;
 		flex-direction: column;
-		flex-wrap: wrap;
-		flex: 1 0 auto;
+		justify-content: center;
 
-		> li {
-			display: contents;
+		.app-toolbar {
+			order: 1;
+		}
+
+		.app-footer {
+			flex: 0 1 auto;
+			overflow: auto;
+		}
+
+		.app-nav {
+			--chroma: 100%;
+			margin: 1rem;
+			background-color: var(--float);
+			z-index: 1;
+			border-radius: var(--border-radius-small);
+			border: 1px solid var(--border);
+			display: flex;
+			padding: 0.25em;
+			gap: 0.25em;
+			width: calc(100% - 2rem);
+			max-width: 720px;
+			align-self: center;
+
+			.nav-link {
+				flex: 1 0 0;
+				justify-content: center;
+				padding: 0.125em 0.5em;
+			}
 		}
 	}
 
-	.separator,
-	.segment {
-		flex: 0 1 100%;
-	}
+	.app-contents:has(.app-main) {
+		display: grid;
+		grid-template-areas:
+			'nav     hr main'
+			'index   hr main'
+			'toolbar hr main';
+		grid-template-columns: var(--sidebar-width) auto 1fr;
+		grid-template-rows: auto 1fr auto;
 
-	.segment {
-		background-color: var(--background);
-		padding: var(--padding);
-		width: var(--segment-width);
-		overflow-y: auto;
-	}
-
-	.separator {
-		border-inline-end: 1px solid var(--edge);
-		inset-inline-start: 1px;
-		width: 1px;
-		z-index: 100;
-	}
-
-	@media (width < 600px) {
-		display: none;
+		.app-nav {
+			grid-area: nav;
+		}
+		.app-footer {
+			grid-area: index;
+			overflow: auto;
+		}
+		.app-main {
+			grid-area: main;
+			overflow: auto;
+		}
+		.app-toolbar {
+			grid-area: toolbar;
+		}
 	}
 }
