--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -210,7 +210,7 @@
 	.extract-title {
 		display: inline;
 	}
-	.source-opener {
+	.content-opener {
 		position: absolute;
 		inset-block-start: 0.15em;
 		inset-inline-end: 0;
@@ -221,7 +221,7 @@
 		opacity: 50%;
 		transition: opacity 150ms;
 	}
-	&:hover .source-opener {
+	&:hover .content-opener {
 		opacity: 1;
 	}
 
