--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -4,6 +4,7 @@
 	--font-stack-mono: 'IBM Plex Mono', Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
 		monospace;
 
+	--font-size-tiny: 0.75em;
 	--font-size-small: 0.85em;
 	--font-size-subhead: calc(3.5em / 3);
 	--font-size-heading: calc(4em / 3);
