--- a/src/styles/defaults.scss
+++ b/src/styles/defaults.scss
@@ -76,6 +76,7 @@ button,
 	user-select: none;
 	display: inline-flex;
 	align-items: center;
+	justify-content: center;
 	background-color: var(--container);
 	color: var(--accent);
 	border: 1px solid var(--border);
