--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -10,6 +10,8 @@
 	--font-size-heading: calc(4em / 3);
 	--font-size-title: calc(6em / 3);
 
+	--line-height-normal: 1.725;
+
 	--font-weight-light: 300;
 	--font-weight-normal: 400;
 	--font-weight-medium: 500;
