--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -150,6 +150,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		padding-inline: 2rem;
 
 		.app-toolbar {
 			order: 1;
