--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -139,7 +139,7 @@
 }
 
 .indigo,
-:root:not([class]) {
+:root:where(:not([class]), [class=""]) {
   --clr-1: light-dark(#fdfdfe, #11131f);
   --clr-2: light-dark(#f7f9ff, #141726);
   --clr-3: light-dark(#edf2fe, #182449);
@@ -349,7 +349,7 @@
 .blue,
 .sky,
 .cyan,
-:root:not([class]) {
+:root:where(:not([class]), [class=""]) {
   --neu-1: light-dark(#fcfcfd, #111113);
   --neu-2: light-dark(#f9f9fb, #18191b);
   --neu-3: light-dark(#f0f0f3, #212225);
@@ -904,7 +904,7 @@
     }
 
     .indigo,
-    :root:not([class]) {
+    :root:where(:not([class]), [class=""]) {
       --clr-1: light-dark(
         color(display-p3 0.992 0.992 0.996),
         color(display-p3 0.068 0.074 0.118)
@@ -1618,7 +1618,7 @@
     .blue,
     .sky,
     .cyan,
-    :root:not([class]) {
+    :root:where(:not([class]), [class=""]) {
       --neu-1: light-dark(
         color(display-p3 0.988 0.988 0.992),
         color(display-p3 0.067 0.067 0.074)
