Standardize usage of type vs. interface for component props

--- a/src/styles/defaults.scss
+++ b/src/styles/defaults.scss
@@ -190,6 +190,7 @@ code,
 kbd,
 samp {
 	font-family: var(--font-stack-mono);
+	// TODO: Add font-size-adjust now that support has landed in Interop 2024.
 	letter-spacing: -0.01em;
 }
 
