--- a/src/styles/defaults.scss
+++ b/src/styles/defaults.scss
@@ -191,7 +191,8 @@ kbd,
 samp {
 	font-family: var(--font-stack-mono);
 	// TODO: Add font-size-adjust now that support has landed in Interop 2024.
-	letter-spacing: -0.01em;
+	letter-spacing: -0.015em;
+	font-size-adjust: cap-height 0.7;
 }
 
 :not(pre) > :where(code, kbd, samp) {
