--- a/src/styles/defaults.css
+++ b/src/styles/defaults.css
@@ -1,4 +1,4 @@
-@import './vars.scss';
+@import './vars.css';
 
 html {
 	block-size: 100dvb;
@@ -8,14 +8,14 @@ html {
 	font-weight: var(--font-weight-normal);
 	font-variant-ligatures: common-ligatures;
 	font-variant-numeric: tabular-nums;
-	//hanging-punctuation: first last;
+	/* hanging-punctuation: first last; */
 	background-color: var(--background);
 	accent-color: var(--link);
 
-	// input,
-	// textarea {
-	// 	hanging-punctuation: none; /* https://adactio.com/journal/21027 */
-	// }
+	/* input,
+	textarea {
+		hanging-punctuation: none; https://adactio.com/journal/21027
+	}  */
 }
 
 body {
@@ -190,7 +190,7 @@ code,
 kbd,
 samp {
 	font-family: var(--font-stack-mono);
-	// TODO: Add font-size-adjust now that support has landed in Interop 2024.
+	/* TODO: Add font-size-adjust now that support has landed in Interop 2024. */
 	letter-spacing: -0.015em;
 	font-size-adjust: cap-height 0.7;
 }
