--- a/src/styles/triptych.css
+++ b/src/styles/triptych.css
@@ -1,4 +1,4 @@
-@import './palette.scss';
+@import './palette.css';
 
 :root {
 	--black: black;
@@ -69,7 +69,7 @@
 }
 
 :where(:root, .dark, .light, .neutral, .chromatic, .themed) {
-	// Neutral
+	/* Neutral */
 	--display-neutral: color-mix(in oklch, var(--neu-a12), var(--mode-contrast));
 	--primary-neutral: var(--neu-a12);
 	--secondary-neutral: var(--neu-a11);
@@ -91,7 +91,7 @@
 	--sink-neutral: var(--neu-a4);
 	--shadow-neutral: light-dark(var(--splash-neutral), var(--black-a4));
 
-	// Chromatic
+	/* Chromatic */
 	--display-chromatic: light-dark(
 		var(--clr-a12),
 		color-mix(in oklch, var(--clr-a12), var(--mode-contrast))
@@ -128,7 +128,7 @@
 	--sink-chromatic: light-dark(var(--clr-a5), var(--clr-a4));
 	--shadow-chromatic: light-dark(var(--splash-chromatic), var(--black-a4));
 
-	// Final Tokens
+	/* Final Tokens */
 	--display: color-mix(in oklch, var(--display-neutral), var(--display-chromatic) var(--chroma));
 	--primary: color-mix(in oklch, var(--primary-neutral), var(--primary-chromatic) var(--chroma));
 	--secondary: color-mix(
