--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -1,8 +1,8 @@
 :root {
 	--font-stack-sans: 'IBM Plex Sans', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 	--font-stack-serif: 'Iowan Old Style', 'Palatino Linotype', 'URW Palladio L', P052, serif;
-	--font-stack-mono: 'IBM Plex Mono', Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
-		monospace;
+	--font-stack-mono:
+		'IBM Plex Mono', Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
 
 	--font-size-tiny: 0.75em;
 	--font-size-small: 0.85em;
